--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@types/node": "20.5.0",
@@ -23,6 +24,10 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.0.1",
+    "@testing-library/react": "^14.0.0",
+    "jest": "^29.6.3",
+    "jest-environment-jsdom": "^29.6.3",
     "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.5.2"
   }
